--- a/src/components/homepage/Testimonial.module.css
+++ b/src/components/homepage/Testimonial.module.css
@@ -68,7 +68,7 @@
 
 @media screen and (min-width: 470px) {
   .testimonials::before {
-    height: 5.75rem;
+    height: 6.75rem;
     background: url('../../assets/images/wave-medium-reversed.png');
     background-size: cover;
   }
